fix for #302. Spinner label wrapping.

--- a/src/components/Spinner/Spinner.scss
+++ b/src/components/Spinner/Spinner.scss
@@ -8,11 +8,9 @@
 
 .ms-Spinner {
   position: relative;
-  width: 20px;
   height: 20px;
 
   &.ms-Spinner--large {
-    width: 28px;
     height: 28px;
 
     .ms-Spinner-label {
